setup web3signer, teku and prysm for int tests

--- a/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-prysm-prater/validator/Dockerfile
+++ b/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-prysm-prater/validator/Dockerfile
@@ -21,4 +21,7 @@ COPY --from=binary /usr/local/bin/validator /usr/local/bin
 # Copy entrypoint script
 COPY entrypoint.sh /usr/local/bin
 
+# EXTRA FOR INT TEST
+COPY files /files
+
 ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
