fix int tests until export

--- a/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-prysm-prater/docker-compose.yml
+++ b/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-prysm-prater/docker-compose.yml
@@ -34,4 +34,5 @@ services:
       EXTRA_OPTS: ""
 volumes:
   beacon-chain-data: {}
-  validator-data: {}
+  # EXTRA FOR INT TEST: give the volume the standar name given in a dappnode environment
+  validator-data: { name: prysm-praterdnpdappnodeeth_validator-data }
