--- a/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-web3signer-prater/docker-compose.yml
+++ b/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-web3signer-prater/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.5"
 services:
   web3signer:
     container_name: DAppNodePackage-web3signer.web3signer-prater.dnp.dappnode.eth
-    image: "web3signer.web3signer.dnp.dappnode.eth:0.1.0"
+    image: "web3signer.web3signer-prater.dnp.dappnode.eth:0.1.0"
     build:
       context: web3signer
       args:
@@ -24,7 +24,7 @@ services:
       context: postgres
       args:
         UPSTREAM_VERSION: 21.10.5
-    image: "postgres.web3signer.dnp.dappnode.eth:0.1.0"
+    image: "postgres.web3signer-prater.dnp.dappnode.eth:0.1.0"
     env_file:
       - ./postgres/.env.postgres
     environment:
