--- a/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-teku-prater/docker-compose.yml
+++ b/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-teku-prater/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       args:
         UPSTREAM_VERSION: 22.1.0
     user: root
-    image: "teku-prater.teku-prater.dnp.dappnode.eth:0.1.0"
+    image: "teku-prater.dnp.dappnode.eth:22.1.0"
     volumes:
       - "teku-prater-data:/opt/teku/data"
     environment:
