fix export in int test

--- a/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-web3signer-prater/docker-compose.yml
+++ b/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-web3signer-prater/docker-compose.yml
@@ -38,6 +38,10 @@ services:
       - "postgres_data:/var/lib/postgresql/data"
       - "postgres_migrations:/docker-entrypoint-initdb.d"
     restart: unless-stopped
+networks:
+  default:
+    external: true
+    name: dncore_network
 volumes:
   web3signer_keyfiles: {}
   web3signer_keyfiles_tmp: {}
