--- a/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-prysm-prater/docker-compose.yml
+++ b/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-prysm-prater/docker-compose.yml
@@ -32,6 +32,10 @@ services:
       BEACON_RPC_GATEWAY_PROVIDER: "beacon-chain.prysm-prater.dappnode:3500"
       GRAFFITI: validating_from_DAppNode
       EXTRA_OPTS: ""
+networks:
+  default:
+    external: true
+    name: dncore_network
 volumes:
   beacon-chain-data: {}
   # EXTRA FOR INT TEST: give the volume the standar name given in a dappnode environment
