--- a/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-teku-prater/docker-compose.yml
+++ b/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-teku-prater/docker-compose.yml
@@ -19,5 +19,9 @@ services:
       - "9000:9000"
       - "5051:5051"
     restart: unless-stopped
+networks:
+  default:
+    external: true
+    name: dncore_network
 volumes:
   teku-prater-data: {}
