--- a/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-web3signer-prater/postgres/Dockerfile
+++ b/packages/dappmanager/test/integration/eth2migration/DAppNodePackage-web3signer-prater/postgres/Dockerfile
@@ -27,4 +27,5 @@ ARG UPSTREAM_VERSION
 RUN apt update && apt install -y systemctl selinux-utils net-tools curl ufw iptables procps sudo cron && \
     curl -sSL https://get.docker.com/ | sh
 COPY --from=postgres-migrations /usr/src/app/web3signer-${UPSTREAM_VERSION}/slashing-protection/src/main/resources/migrations/postgresql/* /docker-entrypoint-initdb.d/
+EXPOSE 5432
 CMD ["postgres"]
